# rtprofile

./: .gitignore  README.md  examples_simple.py  pyproject.toml
.github/workflows/: deploy.yml  test.yml
rtprofile/: __init__.py  code_editor.py  function_profiler.py  memory_profiler.py  profiler.py  profiler_tabs.py  profiler_window.py  qt_profiler.py  qt_shim.py
rtprofile/tests/: __init__.py  test_function_profiler.py
