[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rtprofile"
version = "0.1.0"
description = "Real-time profiling tools for running Python applications with Qt GUI support"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "ACQ4 Contributors"}
]
dependencies = [
    "pyqtgraph>=0.13.0",
]

[project.optional-dependencies]
memory = ["guppy3"]

[project.urls]
Homepage = "https://github.com/acq4/acq4"
