[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rtprofile"
dynamic = ["version"]
description = "Real-time profiling tools for running Python applications with Qt GUI support"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "ACQ4 Contributors"}
]
dependencies = []

[project.optional-dependencies]
qt = ["pyqtgraph>=0.13.0"]
memory = ["guppy3"]

[project.urls]
Homepage = "https://github.com/campagnola/rtprofile"

[tool.setuptools.dynamic]
version = {attr = "rtprofile.__version__"}
